<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeeMe</string>
    <string name="title_register">Register</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Enter email id</string>
    <string name="hint_verification_code">Verification code</string>

    <string name="label_login">Login</string>
    <string name="label_forgot_password"><u>Forgot Password?</u></string>
    <string name="label_dont_have_account">Don\'t have account?</string>
    <string name="label_register_here">Register Here</string>
    <string name="label_agree_t_n_c">By clicking \"Register\", you agree to terms and conditions.</string>
    <string name="label_register">Register</string>
    <string name="label_enter_email">Enter your email address, the instructions will be sent to this email</string>
    <string name="label_send_code">Send Code</string>
    <string name="label_verify_account">Verify Account</string>
    <string name="label_validate_account">Enter verification code to verify account and proceed</string>
    <string name="label_havent_received_verification_mail">Haven\'t received verification email yet?</string>
    <string name="label_send_verification_mail">Send verification email</string>

    <string name="no_internet_connection">Network not available</string>
    <string name="progress_dialog_msg">Please wait...</string>
    <string name="title_activity_validate_account">Validate Account</string>

</resources>
