<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <include
        android:id="@+id/error_bar"
        layout="@layout/error_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/et_username"
            style="@style/EditTextStyle"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_username"
            android:inputType="textAutoComplete"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextStyle"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextStyle"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditTextStyle"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/cb_terms_and_conditions"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/label_agree_t_n_c" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonStyle.Red"
            android:layout_marginTop="18dp"
            android:text="@string/label_register" />

    </LinearLayout>
</LinearLayout>