<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextViewStyle"
            android:layout_marginTop="20dp"
            android:text="@string/label_validate_account" />

        <EditText
            android:id="@+id/et_code"
            style="@style/EditTextStyle"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_verification_code"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_verify_account"
            style="@style/ButtonStyle.Green"
            android:layout_marginTop="30dp"
            android:text="@string/label_verify_account" />

    </LinearLayout>
</LinearLayout>